# mjx-robust-control

./: .gitignore  README.md  pyproject.toml
assets/config/: corridor.json  crazyflies3_3d.json  drones3_3d.json  intersection3.json
assets/mjcf/: corridor.xml  crazyflies3_3d.xml  drones3_3d.xml  intersection3_actual_cars.xml
docs/: commands.md  pbc_mapping.md  systems.md
env/: conda-cpu.yml  conda-gpu.yml
src/: certify.py  check_compatibility.py  evaluate.py  jax_loss_functions.py  jax_models.py  jax_rollout.py  robust_objectives.py  system_configs.py  train.py  visualize.py  workflow_utils.py
tests/: test_certify.py  test_public_systems.py  test_quadrotor_wrench_mixer.py  test_qvel_impulse.py  test_state_layout.py  test_visualize_inputs.py  test_visualize_trace_colors.py
