[project]
name = "mjx-robust-control"
version = "0.1.0"
description = "Robust neural feedback controller examples for MuJoCo/MJX systems."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "equinox==0.13.7",
    "jax==0.10.0",
    "matplotlib==3.10.8",
    "mujoco==3.7.0",
    "mujoco-mjx==3.7.0",
    "numpy==2.4.4",
    "optax==0.2.8",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]==0.10.0",
]

[tool.uv]
package = false
